--- a/Shopping/Shopping.Client/Views/Home/Index.cshtml
+++ b/Shopping/Shopping.Client/Views/Home/Index.cshtml
@@ -1,8 +1,55 @@
-﻿@{
+﻿
+@model IEnumerable<Shopping.Client.Models.Product>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<<h1>Products</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Category)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.ImageFile)
+                 <th>
+                @Html.DisplayNameFor(model => model.Price)
+            </th>
+
+            
+
+        </tr>
+    </thead>
+    <tbody>
+        @foreach(var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(x=> item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(x=> item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(x=> item.Category)
+                </td>
+                <td>
+                    @Html.DisplayFor(x=> item.ImageFile)
+                </td>
+                 <td>
+                    @Html.DisplayFor(x=> item.Price)
+                </td>
+
+            </tr>
+        }
+    </tbody>
+
+</table>
